// Copyright (c) Dolittle. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

import "Events/CommittedEvent.proto";

package dolittle.runtime.events.processing;

option csharp_namespace = "Dolittle.Runtime.Events.Processing";

message EventHorizonSubscriberToPublisherRequest {
    bytes subscriberTenant = 1;
    bytes producerTenant = 2;
    bytes microservice = 3;
    uint32 publicEventsVersion = 4;
}

message EventHorizonPublisherToSubscriberResponse {
    CommittedEvent event = 1;
}

service EventHorizon {
    rpc Subscribe(EventHorizonSubscriberToPublisherRequest) returns(stream EventHorizonPublisherToSubscriberResponse);
}